@@ -54,6 +54,8 @@ Added [[file:mrcal-python-api-reference.html#-R_aligned_to_vector][=mrcal.R_alig
 
 Added [[file:mrcal-python-api-reference.html#-sorted_eig][=mrcal.sorted_eig()=]]
 
+mrcal_rectification_maps() supports latlon AND pinhole rectification
+
 * Migration notes 2.3 -> 3.0
 
 commit 76248fce8655fba0aec1175157cbe8f8da055b7a
